RESOLVED FIXED167783
Align URL setters with spec for URLs that cannot be a base URL
https://bugs.webkit.org/show_bug.cgi?id=167783
Summary Align URL setters with spec for URLs that cannot be a base URL
Alex Christensen
Reported 2017-02-03 00:59:03 PST
Align URL setters with spec for URLs that cannot be a base URL
Attachments
Patch (7.63 KB, patch)
2017-02-03 01:00 PST, Alex Christensen
cdumez: review+
Alex Christensen
Comment 1 2017-02-03 01:00:40 PST
Chris Dumez
Comment 2 2017-02-03 08:41:50 PST
Comment on attachment 300511 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=300511&action=review r=me with a possible improvement suggestion. > Source/WebCore/html/URLUtils.h:246 > void URLUtils<T>::setPathname(const String& value) For the pathname getter above, the spec says: "If context object’s url’s cannot-be-a-base-URL flag is set, then return context object’s url’s path[0]." I don't see any special handling in our code, do we really do the right thing?
Alex Christensen
Comment 3 2017-02-03 09:22:34 PST
I'm not sure, but I'm not touching that code in this patch. It's possible I'll need to add a check in a future patch to pass a future web platform test.
Alex Christensen
Comment 4 2017-02-03 09:23:26 PST
Chris Dumez
Comment 5 2017-02-03 09:23:42 PST
(In reply to comment #3) > I'm not sure, but I'm not touching that code in this patch. It's possible > I'll need to add a check in a future patch to pass a future web platform > test. Sure, merely suggesting we look into this in a follow-up.
Note You need to log in before you can comment on or make changes to this bug.