Source/WebCore/html/URLUtils.h
@@ -104,6 +104,8 @@ template <typename T>
 void URLUtils<T>::setUsername(const String& user)
 {
     URL url = href();
+    if (url.cannotBeABaseURL())
+        return;
     url.setUser(user);
     setHref(url);
 }
@@ -118,6 +120,8 @@ template <typename T>
 void URLUtils<T>::setPassword(const String& pass)
 {
     URL url = href();
+    if (url.cannotBeABaseURL())
+        return;
     url.setPass(pass);
     setHref(url);
 }
@@ -143,6 +147,8 @@ void URLUtils<T>::setHost(const String& value)
     if (value.isEmpty())
         return;
     URL url = href();
+    if (url.cannotBeABaseURL())
+        return;
     if (!url.canSetHostOrPort())
         return;
 
@@ -190,6 +196,8 @@ void URLUtils<T>::setHostname(const String& value)
         return;
 
     URL url = href();
+    if (url.cannotBeABaseURL())
+        return;
     if (!url.canSetHostOrPort())
         return;
 
@@ -210,6 +218,8 @@ template <typename T>
 void URLUtils<T>::setPort(const String& value)
 {
     URL url = href();
+    if (url.cannotBeABaseURL() || url.protocolIs("file"))
+        return;
     if (!url.canSetHostOrPort())
         return;
 
@@ -236,6 +246,8 @@ template <typename T>
 void URLUtils<T>::setPathname(const String& value)
 {
     URL url = href();
+    if (url.cannotBeABaseURL())
+        return;
     if (!url.canSetPathname())
         return;
 
